# android-native

./: .gitignore  .travis.yml  README.md  settings.gradle  travis.yml
.circleci/: config.yml
app/: build.gradle
app/src/androidTest/java/com/ekutt/example/gpacalculator/: GPACalcInstrumentedTest.java
app/src/androidTest/java/ekutt/example/gpacalculator/: GPACalcInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/androidWrapper/: CMakeLists.txt
app/src/main/cpp/android_wrapper/: CMakeLists.txt  GPACalculator_jni.cpp  GPACalculator_jni.h
app/src/main/cpp/gpaCalculator/: CMakeLists.txt
app/src/main/cpp/gpaCalculator/include/: GPACalculator.h
app/src/main/cpp/gpaCalculator/src/: GPACalculator.cpp
app/src/main/java/com/ekutt/example/gpacalculator/: GPACalculator.java  MainActivity.java  Result.java
app/src/main/java/ekutt/example/gpacalculator/: GPACalculator.java  MainActivity.java  Result.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ekutt/example/gpacalculator/: ExampleUnitTest.java
app/src/test/java/ekutt/example/gpacalculator/: ExampleUnitTest.java
